changed top value to prevent 1px overflow

--- a/css/main.less
+++ b/css/main.less
@@ -369,7 +369,7 @@ input[type="submit"] {
 		
 		#totalFixed {
 			position: absolute;
-			bottom: -31px;
+			bottom: -29px;
 			height: 30px;
 			background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#EDEDED), to(#D9D9D9));
 			font-size: 14px;
